--- a/Mutual_Funds.ipynb
+++ b/Mutual_Funds.ipynb
@@ -27,6 +27,32 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "ZMvB9JgHHtED",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "01e9aaf4-ff39-4418-af3e-207f2572b485"
+      },
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "X3mFFxwXwg_k",
         "colab_type": "code",
         "colab": {}
@@ -45,7 +71,7 @@
         "colab": {}
       },
       "source": [
-        "df=pd.read_csv(\"data(1).csv\")"
+        "df=pd.read_csv(\"/content/drive/My Drive/data (1).csv\")"
       ],
       "execution_count": 0,
       "outputs": []
@@ -55,16 +81,16 @@
       "metadata": {
         "id": "VmIT26hbxAZ5",
         "colab_type": "code",
-        "outputId": "418258c6-2c26-42da-ef06-bddb28f26f68",
+        "outputId": "34bb139a-ab1a-48d7-e48a-22b18e8943e2",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 87
+          "height": 84
         }
       },
       "source": [
-        "df.columns\n"
+        "df.columns"
       ],
-      "execution_count": 0,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -79,7 +105,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 50
         }
       ]
     },
@@ -104,7 +130,7 @@
       "metadata": {
         "id": "mAOh1y7H44PC",
         "colab_type": "code",
-        "outputId": "c2956ca9-811f-4766-8fa8-721a4986f182",
+        "outputId": "d574d18a-1079-4c2d-98a3-620bd61681b6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 77
@@ -113,7 +139,7 @@
       "source": [
         "df.head()"
       ],
-      "execution_count": 0,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -163,7 +189,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 52
         }
       ]
     },
@@ -186,7 +212,7 @@
       "metadata": {
         "id": "iFIituMd7pDf",
         "colab_type": "code",
-        "outputId": "e0b780ca-7b35-4521-f2f3-bc6560a30146",
+        "outputId": "e6739442-9cba-4a5a-b95c-2036d5cef2e8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 77
@@ -195,7 +221,7 @@
       "source": [
         "df.head()"
       ],
-      "execution_count": 0,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -249,7 +275,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 54
         }
       ]
     }
